--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ apply my skills and knowledge and make a significant contribution to a team.
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
-                alt="Project 1"
+                src="./assets/project-1.png " 
+                alt="Project 1" id="project-1"
                 class="project-img"
               />
             </div>
@@ -283,13 +283,13 @@ apply my skills and knowledge and make a significant contribution to a team.
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/pranaydas1/Book-Library/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://bookchecker.vercel.app/'"
               >
                 Live Demo
               </button>
